// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets all fields from request 1`] = `
Object {
  "deep": "bounce/index",
  "id": "lodash",
  "platform": "ios",
  "scope": "scoped",
  "tag": "14.5.2",
}
`;

exports[`gets deep path and tag from request 1`] = `
Object {
  "deep": "bounce/index",
  "id": "lodash",
  "platform": null,
  "scope": undefined,
  "tag": "14.5.2",
}
`;

exports[`gets deep path from request 1`] = `
Object {
  "deep": "bounce/index",
  "id": "lodash",
  "platform": null,
  "scope": undefined,
  "tag": "latest",
}
`;

exports[`gets id from request 1`] = `
Object {
  "deep": undefined,
  "id": "lodash",
  "platform": null,
  "scope": undefined,
  "tag": "latest",
}
`;

exports[`gets tag from request 1`] = `
Object {
  "deep": undefined,
  "id": "lodash",
  "platform": null,
  "scope": undefined,
  "tag": "14.5.2",
}
`;

exports[`gets tag from request 2`] = `
Object {
  "deep": "bounce/index",
  "id": "lodash",
  "platform": "ios",
  "scope": undefined,
  "tag": "latest",
}
`;

exports[`gets user from request 1`] = `
Object {
  "deep": undefined,
  "id": "lodash",
  "platform": null,
  "scope": "scoped",
  "tag": "latest",
}
`;
